[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khinsider-dl"
version = "1.4.0"
license = "MIT"
readme = "README.md"
description = "Download KHInsider soundtracks and LaunchBox theme music from the command line"
authors = [{ name = "qwerinope" }]
dependencies = [
  "beautifulsoup4",
  "requests",
  "tqdm",
  "jsonschema",
  "prettytable",
  "mutagen",
  "PyYAML",
]

[project.urls]
Homepage = "https://github.com/qwerinope/khidl"
Issues = "https://github.com/qwerinope/khidl/issues"
Repository = "https://github.com/qwerinope/khidl.git"

[project.scripts]
khidl = "khidl.app:CLI"
